--- a/CodeGeneration/CodeGenerationSettings.xaml
+++ b/CodeGeneration/CodeGenerationSettings.xaml
@@ -2,12 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
-        Title="Настройки генерации кода" Height="300" Width="400" ResizeMode="CanMinimize">
+        Title="Настройки генерации кода" Height="500" Width="400" ResizeMode="CanMinimize">
     <defaultControlsPack:ModernWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/DefaultControlsPack;component/Themes/Generic.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/DefaultControlsPack;component/Themes/Resources/Container.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </defaultControlsPack:ModernWindow.Resources>
@@ -22,7 +21,46 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <defaultControlsPack:EnclosedTabControl Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="2" x:Name="ProjectTabControl" VerticalContentPosition="Bottom"/>
+        <Grid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock Text="Выберете проект" Grid.Column="0" Grid.Row="0" Style="{StaticResource BaseFont}"/>
+            <ComboBox ItemsSource="{Binding ProjectsCollection, Mode=OneWay}" Grid.Column="1" Grid.Row="0" SelectedIndex="{Binding Path=CurrentProjectIndex, Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Title}" Style="{StaticResource BaseFont}" Foreground="{StaticResource MasterBackgroundBrush}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <TextBlock Text="Выберете план реализации" Grid.Column="0" Grid.Row="1" Style="{StaticResource BaseFont}"/>
+            <ComboBox ItemsSource="{Binding PlansCollection, Mode=OneWay}" Grid.Column="1" Grid.Row="1" SelectedIndex="{Binding Path=CurrentPlanIndex, Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Path}" Style="{StaticResource BaseFont}" Foreground="{StaticResource MasterBackgroundBrush}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <DataGrid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding Path=Variables, Mode=TwoWay}" CanUserAddRows="False" SelectionUnit="FullRow" SelectionMode="Single" />
+            <TextBlock Text="Выберете язык для трансформации" Grid.Column="0" Grid.Row="3" Style="{StaticResource BaseFont}"/>
+            <ComboBox ItemsSource="{Binding LanguageCollection, Mode=OneWay}" Grid.Column="1" Grid.Row="3" SelectedIndex="{Binding Path=CurrentLanguageIndex, Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=.}" Style="{StaticResource BaseFont}" Foreground="{StaticResource MasterBackgroundBrush}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <TextBlock Text="Имя файла" Grid.Column="0" Grid.Row="4" Style="{StaticResource BaseFont}"/>
+            <TextBox Foreground="{StaticResource BaseFontBrush}" Background="{StaticResource SlaveBackgroundBrush}" BorderBrush="{StaticResource BorderBrush}" Grid.Column="1" Grid.Row="4" FontSize="14" HorizontalAlignment="Stretch" Text="{Binding OutputName, Mode=TwoWay}" />
+        </Grid>
         <Button Grid.Column="1" Grid.Row="2" Style="{StaticResource {x:Type Button}}" VerticalContentAlignment="Center" Click="OKClick">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="30">
                 <Path Stretch="Fill" Fill="{StaticResource SuccessBrush}" Data="{StaticResource RightArrow}" Width="16" Height="16" VerticalAlignment="Center" Margin="5"/>
