--- a/ImplementationPlanViewer/Viewer.xaml
+++ b/ImplementationPlanViewer/Viewer.xaml
@@ -1,6 +1,16 @@
 ﻿<UserControl x:Class="ImplementationPlanViewer.Viewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
+             Width="{Binding    
+                     Path=ActualWidth,    
+                     RelativeSource={RelativeSource    
+                    Mode=FindAncestor,    
+                    AncestorType={x:Type defaultControlsPack:EnclosedTabControl}}}" Height="{Binding    
+                     Path=ActualHeight,    
+                     RelativeSource={RelativeSource    
+                    Mode=FindAncestor,    
+                    AncestorType={x:Type defaultControlsPack:EnclosedTabControl}}}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -8,7 +18,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <Canvas x:Name="ViewerContent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-    </ScrollViewer>
+        <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Canvas x:Name="ViewerContent" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        </ScrollViewer>
 </UserControl>
