--- a/ImplementationPlanViewer/Viewer.xaml
+++ b/ImplementationPlanViewer/Viewer.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
+             xmlns:converters="clr-namespace:ImplementationPlanViewer.InternalClasses.LocalConverters"
              Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type defaultControlsPack:EnclosedTabControl}}}" 
              Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type defaultControlsPack:EnclosedTabControl}}}"
              >
@@ -13,8 +14,12 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <ScrollViewer>
-        <Grid>
-                <Canvas x:Name="ViewerContent"/>
-        </Grid>
+    <ItemsControl ItemsSource="{Binding Path=Blocks, Mode=TwoWay}">
+        <ItemsControl.ItemsPanel>
+            <ItemsPanelTemplate>
+                <Canvas Background="{StaticResource ErrorBrush}" Width="{Binding Path=MaxLevelToVertex, Mode=OneWay, Converter={converters:CountCPUToWidthConverter}}"/>
+            </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+    </ItemsControl>
     </ScrollViewer>
 </UserControl>
