--- a/QStudio/MainWindow.xaml
+++ b/QStudio/MainWindow.xaml
@@ -130,7 +130,7 @@
                 </Grid.RowDefinitions>
                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
                 <basicComponentsPack:WorkplaceTabs x:Name="WorkplaceTabs" Grid.Row="0" Grid.Column="0"/>
-                <defaultControlsPack:EnclosedTabControl VerticalContentPosition="Top" x:Name="CenterBottomSegment" Grid.Row="2">
+                <defaultControlsPack:EnclosedTabControl VerticalContentPosition="Top" x:Name="CenterBottomSegment" Grid.Row="2"  Visibility="Hidden">
                     <defaultControlsPack:EnclosedTabItem Header="Output" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
                         <basicComponentsPack:DebugConsole x:Name="DebugConsole" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                     </defaultControlsPack:EnclosedTabItem>
