--- a/ImplementationPlanViewer/EllipseIP.xaml
+++ b/ImplementationPlanViewer/EllipseIP.xaml
@@ -1,10 +1,8 @@
 ﻿<UserControl x:Class="ImplementationPlanViewer.EllipseIP"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="40" d:DesignWidth="40" Canvas.Top="{Binding Path=Top, Mode=TwoWay}" Canvas.Left="{Binding Path=Left, Mode=TwoWay}">
+             xmlns:localConverters="clr-namespace:ImplementationPlanViewer.InternalClasses.LocalConverters"
+             Canvas.Top="{Binding Path=Top, Mode=TwoWay}" Canvas.Left="{Binding Path=Left, Mode=TwoWay}" Background="{DynamicResource SlaveBackgroundBrush}"  MouseDown="ClickToEllipse">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -12,8 +10,8 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid x:Name="Element" Background="{DynamicResource SlaveBackgroundBrush}" Width="40" Height="40">
-        <Ellipse Width="30" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" Fill="{DynamicResource SlaveBackgroundBrush}" Stroke="{DynamicResource BaseFontBrush}"/>
+    <Grid x:Name="Element" Width="30" Height="30">
+        <Ellipse x:Name="Ellipse" Width="30" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" Fill="{Binding Path=IsSelected, Mode=OneWay, Converter={localConverters:BlockSelectedToColorConverter}}" Stroke="{DynamicResource BaseFontBrush}"/>
         <TextBlock x:Name="Content" FontSize="14" Style="{DynamicResource BaseFont}" Text="{Binding Path=Content, Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontWeight="Bold"/>
         <TextBlock x:Name="Level" FontSize="12" Style="{DynamicResource BaseFont}"  HorizontalAlignment="Left" VerticalAlignment="Top" TextAlignment="Left"/>
         <TextBlock x:Name="Number" FontSize="12" Style="{DynamicResource BaseFont}" HorizontalAlignment="Left" VerticalAlignment="Bottom" TextAlignment="Left"/>
