--- a/ImplementationPlanViewer/EllipseIP.xaml
+++ b/ImplementationPlanViewer/EllipseIP.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:localConverters="clr-namespace:ImplementationPlanViewer.InternalClasses.LocalConverters"
-             Canvas.Top="{Binding Path=Top, Mode=TwoWay}" Canvas.Left="{Binding Path=Left, Mode=TwoWay}" Background="{DynamicResource SlaveBackgroundBrush}"  MouseDown="ClickToEllipse">
+             Canvas.Top="{Binding Path=Top, Mode=TwoWay}" Canvas.Left="{Binding Path=Left, Mode=TwoWay}" MouseDown="ClickToEllipse">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
