--- a/UnInstaller/UnInstallWindow.xaml
+++ b/UnInstaller/UnInstallWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
-        Title="Установка QStudio" Height="480" Width="450" ResizeMode="CanMinimize" x:Name="ThisWindow" Loaded="InstallWindow_OnLoaded"  Icon="icon.ico">
+        Title="Удаление QStudio" Height="480" Width="450" ResizeMode="CanMinimize" x:Name="ThisWindow" Loaded="InstallWindow_OnLoaded"  Icon="icon.ico">
     <defaultControlsPack:ModernWindow.Resources>
         <Storyboard x:Key="OnUnChecking" x:Name="OnUnChecking">
             <DoubleAnimation Storyboard.TargetName="ThisWindow"
@@ -22,7 +22,7 @@
             <RowDefinition Height="360"/>
             <RowDefinition Height="120"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="20,0" TextAlignment="Left" Foreground="{StaticResource BaseFontBrush}" Text="Установка" FontSize="24" />
+        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="20,0" TextAlignment="Left" Foreground="{StaticResource BaseFontBrush}" Text="Удаление" FontSize="24" />
         <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="20,0">
             <TextBlock   TextAlignment="Left" Foreground="{StaticResource BaseFontBrush}" FontSize="14" TextWrapping="Wrap" Text="Общий процесс"/>
             <ProgressBar Height="20" Margin="0,20" x:Name="TotalBar"/>
