--- a/QStudio/DebugSettings.xaml
+++ b/QStudio/DebugSettings.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
-        Title="DebugSettings" Height="300" Width="300" ResizeMode="CanMinimize">
+        Title="DebugSettings TRIAL VERSION" Height="300" Width="300" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
