--- a/Setup/WarningWindow.xaml
+++ b/Setup/WarningWindow.xaml
@@ -25,7 +25,7 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="20,0" TextAlignment="Left" Foreground="{StaticResource BaseFontBrush}" Text="Внимание!" FontSize="24" />
         <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="20,0">
             <TextBlock   TextAlignment="Left" Foreground="{StaticResource BaseFontBrush}" FontSize="14" TextWrapping="Wrap" >
-                Внимание! После нажатия кнопки "Продолжить" начнётся установка программы. Не прерывайте установку и не закрывайте данное окно. Отменить процесс установки будет невозможно!
+                Внимание! После нажатия кнопки "Продолжить" начнётся установка пробной версии программы. Не прерывайте установку и не закрывайте данное окно. Отменить процесс установки будет невозможно!
             </TextBlock>
         </StackPanel>
         <Button Grid.Column="0" Grid.Row="2" Style="{StaticResource {x:Type Button}}" VerticalContentAlignment="Top" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Click="PreviousWindow" >
